fix z-index

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,7 +2,7 @@
   background-color: $black-color;
   position: sticky;
   top: -100px;
-  z-index: 999;
+  z-index: 20;
   &__container {
     position: relative;
     height: 230px;
